# chat-app-rust

./: .env.example  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20251111_040042_create_users.rs  m20251111_040123_create_rooms.rs  m20251111_040129_create_messages.rs  m20251111_040134_create_room_members.rs
src/: database.rs  main.rs
src/dtos/: auth.rs  chat.rs  mod.rs  room.rs
src/entities/: message.rs  mod.rs  prelude.rs  room.rs  room_member.rs  user.rs
src/handlers/: auth.rs  chat.rs  mod.rs  room.rs  user.rs  ws.rs
src/repositories/: mod.rs  room.rs  room_member.rs  user.rs
src/response/: error.rs  mod.rs  response.rs
src/routes/: auth.rs  chat.rs  mod.rs  user.rs
src/security/: jwt.rs  mod.rs  password.rs
src/services/: auth.rs  chat.rs  mod.rs  room.rs  user.rs
