[package]
name = "chat-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio", "macros", "chrono", "uuid"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }  # Thêm SQLx với runtime-tokio
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
anyhow = "1"
thiserror = "1"
rand_core = { version = "0.6", features = ["std"] }
validator = { version = "0.16", features = ["derive"] }