[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio",
  "sqlx-mysql",
]
